fix BehaviourData.hxx installation

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -20,6 +20,7 @@ mgis_header(MGIS/Behaviour Behaviour.hxx)
 mgis_header(MGIS/Behaviour ChangeBasis.hxx)
 mgis_header(MGIS/Behaviour StateView.hxx)
 mgis_header(MGIS/Behaviour StateView.hxx)
+mgis_header(MGIS/Behaviour BehaviourData.hxx)
 mgis_header(MGIS/Behaviour BehaviourDataView.hxx)
 mgis_header(MGIS/Behaviour State.hxx)
 mgis_header(MGIS/Behaviour MaterialStateManager.hxx)
