Tests are only added when BUILD_TESTING=ON.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -271,7 +271,7 @@ endif(CMAKE_CONFIGURATION_TYPES)
 
 add_subdirectory(include)
 add_subdirectory(src)
-if(MGIS_HAVE_TFEL)
+if(MGIS_HAVE_TFEL AND BUILD_TESTING)
   add_subdirectory(tests)
-endif(MGIS_HAVE_TFEL)
+endif()
 add_subdirectory(bindings)
