Add website target only if doxygen-doc is on.

--- a/docs/web/CMakeLists.txt
+++ b/docs/web/CMakeLists.txt
@@ -54,8 +54,10 @@ if(MGIS_HAVE_JUPYTER_NBCONVERT)
   endfunction(mgis_jupyter_nbconvert_generate_html_page)
 endif(MGIS_HAVE_JUPYTER_NBCONVERT)
 
-add_custom_target(website)
-add_dependencies(doc website)
+if(enable-doxygen-doc)
+  add_custom_target(website)
+  add_dependencies(doc website)
+endif(enable-doxygen-doc)
 
 if(MGIS_HAVE_PANDOC)
   mgis_pandoc_generate_html_page(index "-c css/slideshow.css")
